# -Qt-opencv-

./: .ninja_deps  .ninja_log  CMakeCache.txt.prev  CMakeLists.txt  README.md  about.cpp  about.h  basepage.cpp  basepage.h  build.ninja  cmake_install.cmake  contrastbrightnessslider.cpp  contrastbrightnessslider.h  graphics.cpp  graphics.h  home.cpp  home.h  hslslider.cpp  hslslider.h  labslider.cpp  labslider.h  leetcode.cpp  leetcode.h  main.cpp  mainwindow.cpp  mainwindow.h  mythread.cpp  mythread.h  rgbslider.cpp  rgbslider.h  screen.cpp  screen.h  setting.cpp  setting.h
